Fix trackster navpanel while keeping overflow auto option for left and right unified-panel-body divs.

--- a/client/galaxy/style/less/base.less
+++ b/client/galaxy/style/less/base.less
@@ -296,12 +296,9 @@ div.unified-panel-body-background {
     background: none repeat scroll 0 0 #DFE5F9;
 }
 
-#right div.unified-panel-body {
-    overflow: auto;
-}
-
 #left > div.unified-panel-body, #right > div.unified-panel-body {
     bottom: @panel_footer_height;
+    overflow: auto;
 }
 
 .panel-header-button {
